[package]
name = "staking"
version = "0.1.0"
authors = ["Divyank Rai"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }


sushibar = {path = "../sushibar", default-features = false, features = ["ink-as-dependency"]}

[lib]
name = "staking"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib",
]
[profile.dev]
panic = "abort" # disable stack unwinding on panic
overflow-checks = false
[profile.release]
panic = "abort" # disable stack unwinding on panic
overflow-checks = false
[unstable]
build-std = ["core", "compiler_builtins"]


[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
